add(auth unit tests)